# proyecto-final-programacion-paralela

./: CMakeLists.txt  README.md  benchmark_histogram.csv  benchmark_task_a.csv  benchmark_threads.csv
docs/: HISTOGRAM.md  TASK_B_VECTORIZATION.md
scripts/: benchmark_affinity.ps1  build_vectorized.ps1  plot_scaling.py
src/: main.cpp
